[package]
name = "easy-fs"
authors = ["Clstilmldy <CelestialMelodyGo@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.0"
clap = "2.33.3"
rand = "0.8.0"
chrono = "0.4.0"
